fix: survey 코드 수정 및 readme 수정